<resources>
    <string name="app_name">Calories Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sing_in">sing in</string>
    <string name="sing_out">sing out</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="calories">Calories</string>
    <string name="btnSearch">Search</string>
    <string name="registration">Registarion</string>
    <string name="weight">weight</string>
    <string name="weightTitle">Weight: </string>
    <string name="nameTitle">Name: </string>
    <string name="proteinTitle">Protein: </string>
    <string name="fatTitle">Fat: </string>
    <string name="carbohydrateTitle">Carbohydrate: </string>
    <string name="caloriesTitle">Calories: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Login</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="goal">Goal</string>
    <string name="email">Email:</string>
    <string name="result">Result:</string>
    <string name="get_result">Get Result</string>
    <string name="type_of_life">Type of Life</string>
    <string name="man">Man</string>
    <string name="wooman">Wooman</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="informationSaved">Information has been saved</string>
    <string name="haight_sm">Haight(sm)</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="delete">Delete</string>
    <string name="own_menu">Own menu</string>
    <string name="own_history">Own history</string>

</resources>
