<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ListOfDietProduct">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:id="@+id/tableListOfProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow>
            <TextView
                android:id="@+id/tvDateTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tvNameTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvProtTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/protein" />

            <TextView
                android:id="@+id/tvFatsTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/fat" />

            <TextView
                android:id="@+id/tvCarbTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="Carb" />

            <TextView
                android:id="@+id/tvCalorsTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/calories" />
            <TextView
                android:id="@+id/tvWeightTableList"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/weight" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/addProduct"
        app:srcCompat="@drawable/lock" />
</FrameLayout>