<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvAddFoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edNameFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="260dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <EditText
            android:id="@+id/edProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="260dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:text="@string/fat" />

        <EditText
            android:id="@+id/edFat"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:minWidth="260dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCargoh"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrate" />

        <EditText
            android:id="@+id/edCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="260dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/calories" />

        <EditText
            android:id="@+id/edCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="260dp"/>

    </LinearLayout>


</LinearLayout>