<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CalculateOfReqired">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/weight"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edGoalWeight"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/height"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edGoalHeight"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/age"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edGoalAge"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0.3"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rGroupGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/rbMan"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/rbWooman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/wooman" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/type_of_life"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spTypeOfLife"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGetResultGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CaloriesButtons"
                android:layout_weight="1"
                android:text="@string/get_result" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.143"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rvRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/result"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvResultGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>