<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/row_padding_vertical">


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvDateListHisroty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/tvDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="92dp"
        android:text="text" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvCarb"
        android:layout_alignTop="@+id/tvDate"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:text="@string/name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvNameListHisroty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvCalories"
        android:layout_alignTop="@+id/tvDate"
        android:layout_marginStart="112dp"
        android:layout_marginTop="6dp"
        android:text="text" />


    <TextView
        android:id="@+id/tvProt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvDate"
        android:layout_alignTop="@+id/tvCarb"
        android:layout_marginStart="2dp"
        android:text="@string/proteinTitle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvHistoryProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/tvProt"
        android:layout_alignTop="@+id/tvDateListHisroty"
        android:layout_marginStart="94dp"
        android:layout_marginTop="37dp"
        android:text="text" />


    <TextView
        android:id="@+id/tvFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvProt"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/fat"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvHistoryFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvDateListHisroty"
        android:layout_alignTop="@+id/tvFats"
        android:text="text" />


    <TextView
        android:id="@+id/tvCarb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvDateListHisroty"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="103dp"
        android:text="@string/carbohydrateTitle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvHistoryCargoh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvHistoryCalories"
        android:layout_alignTop="@+id/tvCarb"
        android:layout_marginTop="0dp"
        android:text="text" />

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvCarb"
        android:layout_alignTop="@+id/tvFats"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-19dp"
        android:text="@string/caloriesTitle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvHistoryCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tvDate"
        android:layout_alignStart="@+id/tvNameListHisroty"
        android:layout_marginStart="4dp"
        android:layout_marginTop="34dp"
        android:text="text" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHistoryCalories"
        android:layout_alignStart="@+id/tvName"
        android:layout_marginStart="0dp"
        android:text="@string/weightTitle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvHistoryWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvHistoryCargoh"
        android:layout_alignTop="@+id/tvFats"
        android:layout_marginStart="1dp"
        android:text="text" />
    <TextView
        android:id="@+id/textViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="&#8942;"
        android:textAppearance="?android:textAppearanceLarge" />



</RelativeLayout>